<resources>
    <string name="app_name">Echo Express</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="new_user">New User</string>
    <string name="full_name">full name</string>
    <string name="logout">Logout</string>
    <string name="product_upload_fragment">Product Upload Fragment</string>
    <string name="seller_profile_fragment">Seller Profile Fragment</string>
    <string name="seller_home_fragment">Seller Home Fragment</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="menu">menu</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_amount">Product Amount</string>
    <string name="submit">Submit</string>
    <string name="product_description_product_description_product_description">Product Description Product Description Product Description</string>
    <string name="price_25000">Price: 25000</string>
    <string name="update">Update</string>
    <string name="shop">Shop Name</string>
    <string name="stock_210">Stock: 210</string>
    <string name="title_activity_customer_dashboard">CustomerDashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_to_cart">add to cart</string>


</resources>