<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:title="@string/menu"
        android:icon="@drawable/ic_more_vert_24">
        <menu>
            <item
                android:id="@+id/menuReport"
                android:title="@string/report"
                android:icon="@drawable/ic_home_icon"/>
            <item
                android:id="@+id/menuSetting"
                android:title="@string/setting"
                android:icon="@drawable/ic_add_icon"/>
            <item
                android:id="@+id/menuLogout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout_icon"/>
        </menu>

    </item>
</menu>
